<resources>
    <string name="app_name">Tweet</string>
    <string name="welcomeLogin">login</string>
    <string name="welcomeSignup">signup</string>
    <string name="welcomeTitle">Welcome to TweetApp</string>
    <string name="signupRegister">register</string>
    <string name="loginTitle">Login to Tweet</string>
    <string name="loginSubtitle">You must be registered</string>
    <string name="loginEmail">Email</string>
    <string name="loginPassword">Password</string>
    <string name="loginSignIn">Sign In</string>
    <string name="menuLogout">Logout</string>
    <string name="signupTitle">Sign up for the Tweet App</string>
    <string name="signupSubtitle">Enter details below</string>
    <string name="signupFirstName">First Name</string>
    <string name="signupLastName">Last Name</string>
    <string name="signupEmail">Email</string>
    <string name="signupPassword">Password</string>
    <string name="tweetplaced">Tweet</string>
    <string name="TotalSoFar" />
    <string name="tweetButton">tweet></string>
    <string name="Amount">strings</string>
    <string name="Twitter" >tweet</string>
    <string name="Direct" >tweet</string>
    <string name="Facebook" >Facebook</string>
    <string name="tweetTitle">tweet</string>
    <string name="tweetSubtitle" />
    <string name="reportTitle">report</string>
    <string name="menuTweet">tweet</string>
    <string name="menuSettings">Settings</string>
    <string name="menuReport">Report</string>
    <string name="defaultAmount">00</string>
    <string name="defaultMethod">N/A</string>
    <string name="my_hint">strings</string>
    <string name="tweet_hint">strings</string>
    <string name="tweet_date">strings</string>
    <string name="istweeted">strings</string>
    <string name="status" />
    <string name="tweet">tweet</string>
    <string name="spinner">user</string>
</resources>
